--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>assignment</title>
-    <link rel="stylesheet" href="assignment1css.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <a></a>
