--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    <li>
     <a href="https://youtu.be/dQw4w9WgXcQ?si=lhXTl-8DS8rYwTM6"target="_blank">favorat video</a>
     </li>
-    <li>likes animals</li>
+    <li> i likes animals</li>
 <li>im on my second year of collage</li>
 </ul>
 
