--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <P>i was born and raised on earth , the 3rd planet from the sun.</P>
 <ul>
    <li>
-    <a href="https://youtu.be/dQw4w9WgXcQ?si=lhXTl-8DS8rYwTM6"target="_blank">favorat video</a>
+    <a href="https://youtu.be/dQw4w9WgXcQ?si=lhXTl-8DS8rYwTM6"target="_blank">favorite video</a>
     </li>
     <li> i likes animals</li>
 <li>im on my second year of collage</li>
